--- a/table-of-contents-style-homepage/styles.css
+++ b/table-of-contents-style-homepage/styles.css
@@ -18,6 +18,11 @@ a {
   color: #086CDD;
 }
 
+#navbar {
+  position: fixed;
+  width: 100%;
+}
+
 .desktop-header {
   display: flex;
   justify-content: space-between;
@@ -27,7 +32,7 @@ a {
   color: #f5f5f5;
   font-size: 1.25rem;
   font-weight: bold;
-  margin: 0 0 2.25rem;
+  margin-bottom: 2.25rem;
   padding: 0.5rem 1.5rem;
 }
 
