--- a/table-of-contents-style-homepage/styles.css
+++ b/table-of-contents-style-homepage/styles.css
@@ -32,7 +32,6 @@ a {
   color: #f5f5f5;
   font-size: 1.25rem;
   font-weight: bold;
-  margin-bottom: 2.25rem;
   padding: 0.5rem 1.5rem;
 }
 
@@ -192,7 +191,7 @@ main {
 }
 
 .table-of-contents {
-  padding: 0 3.5rem 0 3.5rem;
+  padding: 8rem 3.5rem 0 3.5rem;
 }
 
 .category-name {
@@ -245,6 +244,8 @@ main {
   text-transform: uppercase;
   font-size: 1.5em;
   margin: 1em 0 0 0;
+  position: relative;
+  z-index: -1;
 }
 
 .blue-text {
@@ -386,6 +387,10 @@ main {
 /* end desktop styles, begin responsive transition to tablet */
 @media screen and (max-width: 1056px) {
 
+  header {
+    background-color: #f5f5f5
+  }
+
   .breadcrumb-box {
     display: none;
   } /* city-selector on desktop */
@@ -408,6 +413,10 @@ main {
 
   main {
     columns: auto;
+  }
+
+  .table-of-contents {
+    padding-top: 10rem;
   }
 
   .category-name > a {
@@ -556,7 +565,7 @@ main {
   }
 
   .table-of-contents {
-    padding: 0 2rem 0 2rem;
+    padding: 10.2rem 2rem 0 2rem;
   }
 
   .category-name > a {
@@ -648,7 +657,7 @@ main {
   position: absolute;
   text-align: center;
   width: 100%;
-  z-index: 10;
+  padding-top: 2rem;
 }
 
 .search-wrapper:active {
