--- a/table-of-contents-style-homepage/styles.css
+++ b/table-of-contents-style-homepage/styles.css
@@ -788,5 +788,60 @@ main {
     padding: 0 1.9rem 1rem 1.9rem;
   }
 }
-
 /* end search box styles */
+
+/* begin About page form submission Thank you message */
+
+.modal form {
+  display: flex;
+  flex-direction: column;
+  max-width: 36em;
+  width: 100%;
+  margin: auto;
+  justify-content: center;
+  padding: 0em 1em 0 1em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -52%);
+}
+
+.thanks-container  {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -52%);
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  background-color: white;
+  padding: 2em 2.8em 2.9em;
+  color: #334d4d;
+}
+.thanks-container h3 {
+  font-size: 2.25em;
+  font-weight: 300;
+  text-align: center;
+  color: #334d4d;
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+.thanks-container p {
+  font-size: 1.5em;
+  color: rgba(51, 77, 77, 0.7);
+}
+
+#message,
+#thanks {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  background-color: transparent;
+  top: 0; left: 0; right: 0; bottom: 0;
+  z-index: 1;
+  transition: .5s all;
+}
+#message:target,
+#thanks:target {
+  background-color: rgba(0,0,0,.6);
+  /* a=alpha channel/opacity is between zero and one - 255 is max red green and blue */
+  visibility: visible;
+  opacity: 1;
+}
